2004-09-05  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/ui/mainactions.py: Removed multithread stuff.
	* gaphor/misc/gidlethread.py: new file. A speudo-thread implementation
	based on the GObject main loop.
	* gaphor/storage.py, gaphor/parser.py: rewrote the load and save
	functions to generators, to be used by the GIdleThread.

2004-09-03  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* setup.py: always do config check before build
	* gaphor/pluginmanager.py: Fixed plugin loading (no longer change
	sys.path). Patch by Cedric Delfosse.

2004-09-01  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* utils/install_mo.py: fixed bug in installation
	* gaphor/i18n.py: make i18n support work

2004-08-31  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* setup.py: fix bug in plugin installation.
	* gaphor/pluginmanager.py: add the plugin directories to sys.path,
	the plugins will not be loaded after installing gaphor.
	* data/plugins/plugineditor: new. was pluginmanager, but that gives
	naming conflicts with the gaphor.pluginmanager module.
	* gaphor/ui/mainwindow.py: do not put the main window's accel group
	on any transient window.

2004-07-22  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/ui/mainactions.py: Added DeleteDiagram action.

2004-07-20  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/dependency.py: Added a new property auto_dependency,
	this will try to automatically set the dependency type (Usage is set
	if the head is connected to an Interface).
	* gaphor/misc/actions.py (ActionPool.execute): added extra optional
	parameter 'active', this can set the state for check- and
	radio-actions.
	* gaphor/diagram/itemactions.py: Added new action AutoDependency.

2004-07-19  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/ui/mainactions.py: Added authors to the About dialog.
	* gaphor/diagram/interface.py: fixed small bug that prohibited a
	required interface to be shown on the bottom.

2004-07-16  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
