@@ -551,6 +551,12 @@ class AssociationEnd(diacanvas.CanvasItem, diacanvas.CanvasEditable, DiagramItem
 
     # Editable
 
+    def on_editable_get_editable_shape(self, x, y):
+        if self.point_name(x, y) < 1.0:
+            return self._name 
+        elif self.point_mult(x,y) < 1.0:
+            return self._mult
+
     def on_editable_start_editing(self, shape):
         pass
 
