@@ -1,3 +1,8 @@
+2004-09-14  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
+
+	* gaphor/diagram/itemactions.py: Support new Editable interface.
+	* gaphor/diagram/*.py: updated diagram items.
+
 2004-09-05  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
 
 	* gaphor/ui/mainactions.py: Removed multithread stuff.
